umbrella-charts/plex/templates/networkpolicy-tcp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex-tcp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: plex
      app.kubernetes.io/name: plex
  policyTypes:
    - Egress
    - Ingress
  egress:
    - ports:
      - port: 443
        protocol: TCP
      - port: 80
        protocol: TCP
      - port: 44444
        protocol: TCP
      - port: 1900
        protocol: UDP
  ingress:
    - ports:
      - port: pms
        protocol: TCP
      - port: plex-dlna
        protocol: TCP
      - port: 44444
        protocol: TCP
