umbrella-charts/plex/templates/networkpolicy-udp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex-udp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: plex
      app.kubernetes.io/name: plex
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
      - port: 1900
        protocol: UDP
  ingress:
    - ports:
      - port: plex-dlna-udp
        protocol: UDP
      - port: plex-gdm1
        protocol: UDP
      - port: plex-gdm2
        protocol: UDP
      - port: plex-gdm3
        protocol: UDP
      - port: plex-gdm4
        protocol: UDP
